<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/ad_view"
        android:background="@color/startColorGradients"
        android:fitsSystemWindows="true"
        tools:context=".ui.activity.MainActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <android.support.design.widget.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="475dp"
                android:fitsSystemWindows="true"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/quote_of_day_background"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/background_light"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_launcher_background"
                    app:layout_collapseMode="parallax" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/soft_gradient_background"
                    android:fitsSystemWindows="true"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="vertical"
                    app:layout_collapseMode="pin">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal|center_vertical"
                        android:padding="16dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableTop="@drawable/ic_flare_24dp"
                            android:drawablePadding="4dp"
                            android:fontFamily="sans-serif-condensed-light"
                            android:text="@string/quote_of_day_section"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title"
                            android:textColor="@android:color/white" />

                    </LinearLayout>

                    <android.support.v7.widget.CardView
                        android:id="@+id/quote_of_day_card"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="16dp"
                        android:foreground="?attr/selectableItemBackground"
                        android:theme="@style/ClickableItem"
                        app:cardBackgroundColor="@android:color/background_light"
                        app:cardCornerRadius="2dp"
                        app:cardElevation="2dp"
                        app:contentPadding="8dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical|center_horizontal"
                            android:orientation="vertical"
                            android:padding="8dp">

                            <TextView
                                android:id="@+id/quote_of_day_content"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:ellipsize="end"
                                android:gravity="center_vertical"
                                android:maxLines="5"
                                android:text="@string/quote_content_placeholder"
                                android:textAlignment="center"
                                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                            <TextView
                                android:id="@+id/quote_of_day_author"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:layout_weight="0"
                                android:ellipsize="end"
                                android:maxLines="1"
                                android:text="@string/quote_author_placeholder"
                                android:textAlignment="center"
                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/renew_quote_button"
                            style="@style/Widget.AppCompat.Button.Borderless"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableEnd="@drawable/ic_autorenew_24dp"
                            android:drawablePadding="4dp"
                            android:text="@string/renew_quote_button"
                            android:textColor="@android:color/white"
                            android:theme="@style/ClickableItem" />

                        <Button
                            android:id="@+id/share_quote_button"
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableEnd="@drawable/ic_send_24dp"
                            android:drawablePadding="4dp"
                            android:text="@string/share_quote_button" />

                    </LinearLayout>

                </LinearLayout>

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                app:cardBackgroundColor="@android:color/background_light"
                app:cardCornerRadius="6dp"
                app:cardElevation="2dp"
                app:contentPadding="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingTop="0dp"
                        android:paddingBottom="0dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingStart="16dp"
                            android:paddingTop="16dp"
                            android:paddingEnd="2dp"
                            android:paddingBottom="16dp">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:drawableStart="@drawable/ic_favorite_24dp"
                                android:drawablePadding="4dp"
                                android:fontFamily="sans-serif-condensed-light"
                                android:text="@string/top_authors_section"
                                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                            <Button
                                android:id="@+id/more_author_button"
                                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:text="@string/more_button"
                                android:theme="@style/ClickableItem" />

                        </LinearLayout>

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/top_authors_recycler_snapview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:orientation="horizontal"
                            android:paddingTop="2dp"
                            android:paddingBottom="2dp"
                            app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

                    </LinearLayout>

                    <!--<RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="200dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_launcher_background" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:gravity="center_vertical"
                            android:orientation="vertical"
                            android:padding="16dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Stories"
                                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Crie um Storie para as suas redes sociais"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                            <Button
                                android:id="@+id/build_storie"
                                style="@style/Widget.AppCompat.Button.Colored"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Construir!" />

                        </LinearLayout>

                    </RelativeLayout> -->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingTop="0dp"
                        android:paddingBottom="0dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical|center_horizontal"
                            android:padding="16dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:drawableTop="@drawable/ic_grade_24dp"
                                android:drawablePadding="4dp"
                                android:fontFamily="sans-serif-condensed-light"
                                android:text="@string/top_quotes_section"
                                android:textAlignment="center"
                                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                        </LinearLayout>

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/top_quotes_list"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_gravity="bottom|center"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-8331859175410957/2726648882" />

</RelativeLayout>
